--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-boilerplate",
+  "name": "bakery",
   "version": "1.0.0",
   "description": "Frontend boilerplate based on gulp",
   "main": "index.js",
@@ -21,7 +21,7 @@
     "@linthtml/linthtml": "^0.3.2",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "0.0.1",
-    "@mate-academy/scripts": "^0.7.13",
+    "@mate-academy/scripts": "^0.9.2",
     "@mate-academy/stylelint-config": "0.0.9",
     "colors": "^1.3.3",
     "eslint": "^5.16.0",
@@ -40,5 +40,13 @@
   "mateAcademy": {
     "projectType": "layout"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ForestForgeron/layout_creativeBakery.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ForestForgeron/layout_creativeBakery/issues"
+  },
+  "homepage": "https://github.com/ForestForgeron/layout_creativeBakery#readme"
 }
